fix: text alignment in tables
This changed when updated Sphinx. Now this class
needs to be defined to recover the previous behavior.

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -777,3 +777,8 @@ details[open] > summary:before {
 summary::-webkit-details-marker {
   display:none;
 }
+
+/* Default text alignment for tables */
+.align-default {
+  text-align: left;
+}
